monitor/prometheus/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: data
  name: prometheus-service
spec:
  selector:
    app: prometheus-server
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 9090
